<resources>
    <string name="app_name">FakeLoginApp</string>
    <string name="login">login</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">sign up</string>
    <string name="for_your_account">for your account</string>
    <string name="name">Name</string>
    <string name="i_have_read_and_agree_the_privacy_policy">I have read and agree the Privacy Policy</string>
    <string name="welcome">Welcome</string>
</resources>