<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/colorMain"
        android:textSize="34sp"
        android:layout_marginTop="@dimen/dimin_80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimin_60dp"
        android:layout_marginTop="@dimen/dimin_04dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/for_your_account"
        android:textAllCaps="true"
        android:textColor="@color/colorMain"
        android:textSize="16sp"
        android:letterSpacing="0.3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dimin_40dp"
        android:paddingStart="@dimen/dimin_40dp"
        android:layout_gravity="center|center_vertical">

        <EditText
            android:id="@+id/edtNameSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"/>

        <EditText
            android:id="@+id/edtEmailSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"
            android:layout_marginTop="@dimen/dimin_20dp"/>

        <EditText
            android:id="@+id/edtPasswordSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"
            android:textColor="@color/colorMain"
            android:layout_marginTop="@dimen/dimin_20dp"/>

        <CheckBox
            android:id="@+id/cbxSingUp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_read_and_agree_the_privacy_policy"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorMain" />

        <Button
            android:id="@+id/btnSignUpSignUp"
            android:layout_width="@dimen/dimin_200dp"
            android:layout_height="@dimen/dimin_40dp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:background="@color/colorMain"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="@dimen/dimin_50dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnLoginSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorMain"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimin_10dp"/>
    </LinearLayout>


</LinearLayout>